chore(deploy): config finale pour Render + Vercel (SUPABASE_DB_URL, frontendUrl, vercel.json)